--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -6,7 +6,10 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0">
 	<title>Home - Shopme Admin</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
-	<script type="text/javascript" th:src="@{webjars/jquery/jquery.min.js}"></script>
+	<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/style.css}" />
+	<script type="text/javascript" th:src="@{webjars/jquery/jquery.min.js}">
+	</script>
 	<script type="text/javascript" th:src="@{webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
 
@@ -93,13 +96,20 @@
 						<td>[[${user.roles}]]</td>
 						<td>[[${user.enabled}]]</td>-->
 						<td>[[${user.getId()}]]</td>
-						<td></td>
+						<td><span class="fas fa-portrait fa-3x icon-silver"></span></td>
 						<td>[[${user.getEmail()}]]</td>
 						<td>[[${user.getFirstName()}]]</td>
 						<td>[[${user.getLastName()}]]</td>
 						<td>[[${user.getRoles()}]]</td>
-						<td>[[${user.isEnabled()}]]</td>
-						<td>Edit &nbsp; Delete</td>
+						<td>
+							<a th:if="${user.enabled == true} "class="fas fa-check-circle fa-2x icon-green" href=""></a>
+							<a th:if="${user.enabled != true} "class="fas fa-check-circle fa-2x icon-dark" href=""></a>
+						</td>
+						<td>
+							<a class="fas fa-edit fa-2x icon-green" href=""></a>
+							&nbsp;
+							<a class="fas fa-trash fa-2x icon-dark" href=""></a>
+						</td>
 					</tr>
 				</tbody>
 			</table>
