--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
@@ -4,7 +4,7 @@
 <head xmlns:th="http://www.thymeleaf.org">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0">
-	<title>Create New User</title>
+	<title>[[${pageTitle}]]</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
 	<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
@@ -61,10 +61,12 @@
 			</nav>
 		</div>
 		<div>
-			<h2>Manage Users | Create New User</h2>
+			<h2>Manage Users | [[${pageTitle}]]</h2>
 		</div>
+
 		<form th:action="@{/users/save}" method="post" style="max-width: 700px; margin:0 auto" th:object="${user}"
 			onsubmit="return checkEmailUniqueness(this);">
+			<input type="hidden" th:field="*{id}" />
 			<!--p stands for padding here-->
 			<div class="border border-secondary rounded p-3">
 				<div class="form-group row">
@@ -91,8 +93,10 @@
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">Password</label>
 					<div class="col-sm-8">
-						<input type="password" class="form-control" th:field="*{password}" required minlength="8"
-							maxlength="20" />
+						<input type="password" th:if="${user.id}==null" class="form-control" th:field="*{password}"
+							required minlength="8" maxlength="20" />
+						<input type="password" th:if="${user.id}!=null" class="form-control" th:field="*{password}"
+							minlength="8" maxlength="20" />
 					</div>
 				</div>
 				<div class="form-group row">
@@ -153,18 +157,19 @@
 		function checkEmailUniqueness(form) {
 			url = "[[@{/users/check_email}]]";
 			userEmail = $("#email").val();
+			userId = $("#id").val();
 			csrfValue = $("input[name='_csrf']").val();
-			params = {email: userEmail, _csrf: csrfValue};
+			params = {id: userId, email: userEmail, _csrf: csrfValue};
 			$.post(url, params, function (response) {
 				if (response == "OK") {
 					form.submit();
 				} else if (response == "Duplicated") {
 					showModalDialog("Warning", "There is another user having the email " + userEmail);
-				}else{
-					showModalDialog("Error","Unknown response from server");
+				} else {
+					showModalDialog("Error", "Unknown response from server");
 				}
-			}).fail(function(){
-				showModalDialog("Error","Could not connect to the server");
+			}).fail(function () {
+				showModalDialog("Error", "Could not connect to the server");
 			});
 			return false;
 		}
