--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -102,11 +102,12 @@
 						<td>[[${user.getLastName()}]]</td>
 						<td>[[${user.getRoles()}]]</td>
 						<td>
-							<a th:if="${user.enabled == true} "class="fas fa-check-circle fa-2x icon-green" href=""></a>
-							<a th:if="${user.enabled != true} "class="fas fa-check-circle fa-2x icon-dark" href=""></a>
+							<a th:if="${user.enabled == true} " class="fas fa-check-circle fa-2x icon-green"
+								href=""></a>
+							<a th:if="${user.enabled != true} " class="fas fa-check-circle fa-2x icon-dark" href=""></a>
 						</td>
 						<td>
-							<a class="fas fa-edit fa-2x icon-green" href=""></a>
+							<a class="fas fa-edit fa-2x icon-green" th:href="@{'/users/edit/'+${user.id}} " title="Edit this user"></a>
 							&nbsp;
 							<a class="fas fa-trash fa-2x icon-dark" href=""></a>
 						</td>
